deploy: e4d21bf32a3565303a60f1a666a17ca606f90d85

--- a/print.html
+++ b/print.html
@@ -37,10 +37,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-a5f92462.js";
+            window.path_to_searchindex_js = "searchindex-e5475cd1.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-a2c5dde0.js"></script>
+        <script src="toc-9f85df4a.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -1050,6 +1050,10 @@ go build -o tools
 <h4 id="withdraw-brev"><a class="header" href="#withdraw-brev">Withdraw BREV</a></h4>
 <p>You can withdraw your unstaked BREV once the 7-day processing window has passed, by simply clicking the <em>Withdraw</em> button on the Dashboard page. If you have no unstaked BREV or your unstaked BREV is still within the 7-day waiting period, the <em>Withdraw</em> button will be disabled.</p>
 <p><img src=".gitbook/assets/Screenshot 2025-12-24 at 22.48.11.png" alt=""><figcaption></figcaption></p>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="whitepaper"><a class="header" href="#whitepaper">Whitepaper</a></h1>
+<p>MiCAR whitepaper: <a href="https://brevis.network/whitepaper/micar.xhtml">https://brevis.network/whitepaper/micar.xhtml</a></p>
+<p>Whitepaper: <a href="https://brevis.network/whitepaper/provernet.pdf">https://brevis.network/whitepaper/provernet.pdf</a></p>
 
                     </main>
 
