deploy: 24560fde1423045a1eaceec203a7ab386cc687b0

--- a/user-tutorial/staking-in-provernet.html
+++ b/user-tutorial/staking-in-provernet.html
@@ -36,7 +36,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-e5475cd1.js";
+            window.path_to_searchindex_js = "../searchindex-dec91b9b.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-9f85df4a.js"></script>
@@ -176,38 +176,39 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="staking-in-provernet"><a class="header" href="#staking-in-provernet">Staking in ProverNet</a></h1>
-<p>BREV holders may stake BREV to the provers in ProverNet. The process of staking is a form of active participation similar to proof of stake delegation. With these delegated BREV, a prover can therefore receive more proving workload by locking them up and earn additional revenue. In return, the prover will share a portion of the proving fees with the delegators.</p>
+<p>BREV holders can stake and delegate tokens to provers on ProverNet. Delegation works similarly to proof-of-stake systems: provers with more delegated stake can take on more proving jobs, and in return they share a portion of the proving fees with their delegators.</p>
 <h4 id="bridge-brev-to-base"><a class="header" href="#bridge-brev-to-base">Bridge BREV to Base</a></h4>
-<p>ProverNet allows you staking BREV on Base. Before you start staking, you may need to bridge BREV to Base first, via <a href="https://cbridge.celer.network/1/8453/BREV">cBridge</a>.</p>
+<p>ProverNet staking currently operates on Base. Before you start staking, you may need to bridge BREV to Base using <a href="https://cbridge.celer.network/1/8453/BREV">cBridge</a>.</p>
 <p><em>[Screenshot]</em></p>
 <h4 id="view-active-provers"><a class="header" href="#view-active-provers">View Active Provers</a></h4>
-<p>Note that if the delegated prover fails to meet its SLA commitments, your delegated stake may be slashed. Therefore, it is critical to carefully evaluate different proving providers and adjust<br>your stakes from time to time. Visit Brevis Prover Network <em>[Link]</em> and you can view all active provers in the ProverNet, along with key statistics such as the number of BREV staked, the number of proofs generated, and the proof fee received.</p>
+<p>If a prover fails to meet its SLA commitments, delegated stake may be slashed. Evaluate provers carefully and adjust your delegation periodically. </p>
+<p>Visit the Brevis Prover Network <em>[Link]</em> to view all active provers along with key statistics including BREV staked, proofs generated, and fees earned.</p>
 <h4 id="stake-brev"><a class="header" href="#stake-brev">Stake BREV</a></h4>
-<p>To start staking your BREV, you will need to connect wallet and select the prover you would like to stake with. </p>
+<p>To stake, connect your wallet and select a prover. </p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.19.49.png" alt=""><figcaption></figcaption></p>
-<p>Once wallet is connected, the <em>Stake</em> button will be enabled and you can click the button to stake now!</p>
+<p>Once connected, the <em>Stake</em> button will be enabled.</p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.33.54.png" alt=""><figcaption></figcaption></p>
-<p>You may need to <em>Approve</em> the Brevis staking contract first to allow it to spend your BREV. Once sufficient amount is approved, the <em>Stake</em> button will be enabled, and you can submit the stake transaction.</p>
+<p>You may need to <em>Approve</em> the Brevis staking contract to allow the spending of BREV first. Once approved, you can submit the stake transaction.</p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.32.25.png" alt=""><figcaption></figcaption></p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.36.00.png" alt=""><figcaption></figcaption></p>
-<p>You can also increase your stake with provers you’ve already delegated to. Visit the <em>Dashboard</em> <em>[Link]</em> to see your current delegated provers and use the <em>Stake More</em> option to add additional BREV.</p>
+<p>To increase your stake with provers you’ve already delegated to, visit the <em>Dashboard</em> <em>[Link]</em> and use the <em>Stake More</em> option.</p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.37.21.png" alt=""><figcaption></figcaption></p>
 <h4 id="dashboard"><a class="header" href="#dashboard">Dashboard</a></h4>
-<p>On the Dashboard <em>[LINK]</em>, you can view your total stake and see detailed staking information for each prover, including the staked amount, the pending unstake amount, and the withdrawable amount.</p>
+<p>The Dashboard <em>[LINK]</em> displays your total stake and detailed information for each prover, including staked amount, pending unstake amount, and withdrawable amount.</p>
 <ul>
-<li><strong>Your total stake</strong>: includes all your staked BREV to each prover plus the staking rewards you’ve earned. The staking rewards are automatically compounded into your total stake on a daily basis.</li>
-<li><strong>Staked amount for each prover</strong>: is the total amount of BREV you currently staked with this prover.</li>
-<li><strong>Pending unstake amount</strong>: is the unstaked amount pending in the unstaking process, which takes 7 days to complete.</li>
-<li><strong>Withdrawable amount</strong>: is the unstaked amount with this prover that has passed the 7-day processing window and is now withdrawable.</li>
+<li><strong>Total stake</strong>: All BREV staked across provers plus earned rewards. Rewards compound automatically on a daily basis.</li>
+<li><strong>Staked amount</strong>: BREV currently staked with a specific prover.</li>
+<li><strong>Pending unstake</strong>: Amount currently in the 7-day unstaking period.</li>
+<li><strong>Withdrawable amount</strong>: Unstaked amount that has passed the 7-day period and is ready to withdraw.</li>
 </ul>
 <h4 id="unstake-brev"><a class="header" href="#unstake-brev">Unstake BREV</a></h4>
-<p>You can unstake your BREV at any time by clicking the <em>Request Unstake</em> button on the Dashboard page. </p>
+<p>You can unstake BREV at any time by clicking the <em>Request Unstake</em> button on the Dashboard page. </p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.03.56.png" alt=""><figcaption></figcaption></p>
-<p>First, you may need to <em>Approve</em> the Brevis staking contract to allow it to unstake your BREV. Once sufficient amount is approved, the <em>Unstake</em> button will be enabled, and you can submit the unstake transaction. Please note that the unstaking process takes <strong>7 days</strong>. After the waiting period, you can withdraw your BREV and have them returned to your account.</p>
+<p>You may need to <em>Approve</em> the Brevis staking contract first. Once approved, submit the unstake transaction. The unstaking period is <strong>7 days</strong>. After the waiting period, you can withdraw your BREV.</p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 21.46.15 (1).png" alt=""><figcaption></figcaption></p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.01.40.png" alt=""><figcaption></figcaption></p>
 <h4 id="withdraw-brev"><a class="header" href="#withdraw-brev">Withdraw BREV</a></h4>
-<p>You can withdraw your unstaked BREV once the 7-day processing window has passed, by simply clicking the <em>Withdraw</em> button on the Dashboard page. If you have no unstaked BREV or your unstaked BREV is still within the 7-day waiting period, the <em>Withdraw</em> button will be disabled.</p>
+<p>Once the 7-day period has passed, click the <em>Withdraw</em> button on the Dashboard page to return your BREV to your wallet. The <em>Withdraw</em> button remains disabled if you have no unstaked BREV, or until the waiting period is complete.</p>
 <p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.48.11.png" alt=""><figcaption></figcaption></p>
 
                     </main>
